crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__alert_configs__test__create_on_existing_task.snap
---
source: crates/control-plane-api/src/server/public/graphql/alert_configs.rs
assertion_line: 445
expression: response
---
{
  "data": {
    "updateAlertConfig": {
      "catalogPrefixOrName": "aliceCo/in/capture-foo",
      "created": true,
      "id": "[id]"
    }
  }
}
