crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__alert_configs__test__create_on_own_prefix.snap
---
source: crates/control-plane-api/src/server/public/graphql/alert_configs.rs
expression: response
---
{
  "data": {
    "updateAlertConfig": {
      "catalogPrefixOrName": "aliceCo/",
      "created": true,
      "id": "[id]"
    }
  }
}
