crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__alert_configs__test__mask_alert_configs_empty.snap
---
source: crates/control-plane-api/src/server/public/graphql/alert_configs.rs
expression: response
---
{
  "data": {
    "alertConfigs": {
      "edges": []
    }
  },
  "errors": null
}
