crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__alert_configs__test__mask_update_alert_config_admin.snap
---
source: crates/control-plane-api/src/server/public/graphql/alert_configs.rs
assertion_line: 1193
expression: response
---
{
  "data": {
    "updateAlertConfig": {
      "catalogPrefixOrName": "aliceCo/",
      "created": true,
      "id": "[id]"
    }
  },
  "errors": null
}
